# nbdev-poetry-kedro-starter

./: .gitpod.Dockerfile  .gitpod.yml  LICENSE  README.md  pyproject.toml  settings.ini
starter/: README.md  pyproject.toml
starter/conf/base/: logging.yml
starter/docs/source/: conf.py  index.rst
starter/src/: setup.py
starter/src/starter/: __init__.py  __main__.py  settings.py
starter/src/tests/: test_run.py
