[tool.poetry]
name = "starter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
kedro = "^0.18.2"
pandas = "^1.4.1"
loguru = "^0.6.0"
kedro = "^0.18.0"
kedro-docker = "^0.3.0"
scipy = "^1.8.0"
python-dotenv = "^0.20.0"
plotly = "^5.9.0"

[tool.poetry.group.dev.dependencies]
nbdev = "^2.2.10"
pre-commit = "^2.17.0"
pytest = "^7.0.1"
ipykernel = "^6.15.1"
pylint = "^2.12.2"
black = {version = "^22.1.0", allow-prereleases = true}
moviepy = "^1.0.3"
flake8 = "^4.0.1"
isort = "^5.10.1"
safety = "^1.10.3"
friendly = "^0.5.19"
pytest-cov = "^3.0.0"
kedro-viz = "^4.7.0"
hypothesis = "^6.49.1"
mkdocs = "^1.3.1"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-material = "^8.3.9"
mkdocs-macros-plugin = "^0.7.0"
mkdocs-autorefs = "^0.4.1"
mkdocs-drawio-exporter = "^0.8.0"
mkdocs-jupyter = "^0.21.0"



[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = "kedro"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/data_platform -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.nbdev]


[build-system]
requires = ["poetry-core>=1.0.0","setuptools"]
build-backend = "poetry.core.masonry.api"

